[package]
name = "june-lang"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
leb128 = "0.2.5"
wasmtime = "15.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
